tests/errors/arrays/assigned-to-i32.fn
---
Description: Array literal assigned to non-array i32 type
Expected: FN3201
---

type Program
{
    fn Main -> i32
    {
        var notArray: i32 = [1, 2, 3]
        return 0
    }
}
